--- a/projects/Javascript 101/assets/css/desktop.css
+++ b/projects/Javascript 101/assets/css/desktop.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
 
 body {
+    background-color: rebeccapurple;
+}
 
+.toggleBg {
+    background-color: darkslategrey;
 }
 
 .some-class {
