--- a/projects/js-playground/assets/css/js-playground.css
+++ b/projects/js-playground/assets/css/js-playground.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+
 body, html {
     height: 100%;
     margin: 0;
@@ -21,18 +22,33 @@ main {
 }
 
 .jave {
-    background-color: darkblue;
+    background: darkblue;
     border: 2px solid black;
+    display: flex;
+    align-items: center;
+}
+
+.dang {
+    
 }
 
 .stepbro {
-    transition: 0.5s;
 }
 
-.stepbro:hover {
+/* .stepbro:hover {
     transform: rotate(360deg);
+} */
+
+#light {
+    visibility: hidden;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
 }
 
-.light {
-    display: none;
+.twenty {
+
 }
