fixed box 3 and started box 4

--- a/projects/js-playground/assets/css/js-playground.css
+++ b/projects/js-playground/assets/css/js-playground.css
@@ -24,6 +24,7 @@ main {
     border: 2px solid black;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .dang {
@@ -47,7 +48,7 @@ main {
     align-items: center;
 }
 
-.dash {
+.box3 {
     display: flex;
     flex-flow: column;
     color: white;
