--- a/projects/js-playground/assets/css/js-playground.css
+++ b/projects/js-playground/assets/css/js-playground.css
@@ -26,6 +26,12 @@ p {
     justify-content: center;
 }
 
+#light img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
 #dark {
     width: 100%;
     height: 100%;
@@ -59,11 +65,11 @@ p {
 }
 
 .back {
-    margin-left: -180px;
+    margin-left: -160px;
 }
 
 .forw {
-    margin-left: 180px;
+    margin-left: 160px;
 }
 
 .box3 {
@@ -95,7 +101,7 @@ p {
     border-radius: 10px;
 }
 
-#controls1 {
+#controls {
     display: flex;
     flex-flow: row;
 }
@@ -111,11 +117,6 @@ p {
 #percent {
     margin: 5px;
     width: 30px;
-}
-
-#controls2 {
-    display: flex;
-    flex-flow: row;
 }
 
 .box6 {
@@ -154,7 +155,7 @@ p {
     font-size: 25px;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1000px){  /* This is a sad excuse for a tablet optimization */
     main {
         display: flex;
         flex-flow: column;
@@ -163,9 +164,9 @@ p {
         height: 300px;
     }
     .back {
-        margin-left: -100px;
+        margin-left: -130px;
     }
     .forw {
-        margin-left: 100px;
+        margin-left: 130px;
     }
 }
